@@ -43,19 +43,19 @@ public class PotionConcoctingRecipe implements Recipe<RecipeInput> {
 
 	@Override
 	public boolean matches(RecipeInput pRecipeInput, Level pLevel) {
-		return this.ingredient.items().size() < 3 ? this.ingredient.items().size() < 2 ? this.matchesSingle(pRecipeInput) : this.matchesDouble(pRecipeInput) : this.matchesTriple(pRecipeInput);
+		return this.ingredient.getValues().size() < 3 ? this.ingredient.getValues().size() < 2 ? this.matchesSingle(pRecipeInput) : this.matchesDouble(pRecipeInput) : this.matchesTriple(pRecipeInput);
 	}
 
 	public boolean matchesSingle(RecipeInput pRecipeInput) {
-		return this.ingredient.items().getFirst().value() == pRecipeInput.getItem(0).getItem() && pRecipeInput.getItem(1).isEmpty() && pRecipeInput.getItem(2).isEmpty();
+		return this.ingredient.getValues().get(0).value() == pRecipeInput.getItem(0).getItem() && pRecipeInput.getItem(1).isEmpty() && pRecipeInput.getItem(2).isEmpty();
 	}
 
 	public boolean matchesDouble(RecipeInput pRecipeInput) {
-		return this.ingredient.items().get(0).value() == pRecipeInput.getItem(0).getItem() && this.ingredient.items().get(1).value() == pRecipeInput.getItem(1).getItem() && pRecipeInput.getItem(2).isEmpty();
+		return this.ingredient.getValues().get(0).value() == pRecipeInput.getItem(0).getItem() && this.ingredient.getValues().get(1).value() == pRecipeInput.getItem(1).getItem() && pRecipeInput.getItem(2).isEmpty();
 	}
 
 	public boolean matchesTriple(RecipeInput pRecipeInput) {
-		return this.ingredient.items().get(0).value() == pRecipeInput.getItem(0).getItem() && this.ingredient.items().get(1).value() == pRecipeInput.getItem(1).getItem() && this.ingredient.items().get(2).value() == pRecipeInput.getItem(2).getItem();
+		return this.ingredient.getValues().get(0).value() == pRecipeInput.getItem(0).getItem() && this.ingredient.getValues().get(1).value() == pRecipeInput.getItem(1).getItem() && this.ingredient.getValues().get(2).value() == pRecipeInput.getItem(2).getItem();
 	}
 
 	public int colour() {
